[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jthtools"
version = "0.0.1"
authors = [
  { name="Mirza Cenanovic", email=" mirza.cenanovic@gmail.com" },
]
description = "A small example package with tools for marimo."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/cenmir/JTHTools"
"Bug Tracker" = "https://github.com/cenmir/JTHTools/issues"
